--- a/app/src/main/res/menu/play_tracker.xml
+++ b/app/src/main/res/menu/play_tracker.xml
@@ -5,4 +5,6 @@
         app:showAsAction="withText|ifRoom" />
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_login_eam" android:title="@string/action_login_eam"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
